# recsys-challenge-24

./: .gitignore  .gitmodules  DKN.md  Makefile  README.md  TODO.md  nrms_ebnerd.ipynb  pyproject.toml  requirements.txt  run.sh
hyperopt/: all_results.txt
hyperopt/LSTUR_h100_u20000_t10/: evaluation_results.txt
hyperopt/LSTUR_h100_u20000_t100/: evaluation_results.txt
hyperopt/LSTUR_h100_u20000_t50/: evaluation_results.txt
hyperopt/LSTUR_h100_u50000_t10/: evaluation_results.txt
hyperopt/LSTUR_h100_u50000_t100/: evaluation_results.txt
hyperopt/LSTUR_h100_u50000_t50/: evaluation_results.txt
hyperopt/LSTUR_h100_u70000_t10/: evaluation_results.txt
hyperopt/LSTUR_h100_u70000_t100/: evaluation_results.txt
hyperopt/LSTUR_h100_u70000_t50/: evaluation_results.txt
hyperopt/LSTUR_h10_u20000_t10/: evaluation_results.txt
hyperopt/LSTUR_h10_u20000_t100/: evaluation_results.txt
hyperopt/LSTUR_h10_u20000_t50/: evaluation_results.txt
hyperopt/LSTUR_h10_u50000_t10/: evaluation_results.txt
hyperopt/LSTUR_h10_u50000_t100/: evaluation_results.txt
hyperopt/LSTUR_h10_u50000_t50/: evaluation_results.txt
hyperopt/LSTUR_h10_u70000_t10/: evaluation_results.txt
hyperopt/LSTUR_h10_u70000_t100/: evaluation_results.txt
hyperopt/LSTUR_h10_u70000_t50/: evaluation_results.txt
hyperopt/LSTUR_h50_u20000_t10/: evaluation_results.txt
hyperopt/LSTUR_h50_u20000_t100/: evaluation_results.txt
hyperopt/LSTUR_h50_u20000_t50/: evaluation_results.txt
hyperopt/LSTUR_h50_u50000_t10/: evaluation_results.txt
hyperopt/LSTUR_h50_u50000_t100/: evaluation_results.txt
hyperopt/LSTUR_h50_u50000_t50/: evaluation_results.txt
hyperopt/LSTUR_h50_u70000_t10/: evaluation_results.txt
hyperopt/LSTUR_h50_u70000_t100/: evaluation_results.txt
hyperopt/LSTUR_h50_u70000_t50/: evaluation_results.txt
hyperopt/LSTUR_l0.0001_d0.1/: evaluation_results.txt
hyperopt/LSTUR_l0.0001_d0.3/: evaluation_results.txt
hyperopt/LSTUR_l0.0001_d0.5/: evaluation_results.txt
notebooks/: dkn.ipynb  dkn.md  hyperopt-analysis.ipynb  lstur-analysis.ipynb  lstur-hyperopt.ipynb  lstur-mind.ipynb  lstur-native.ipynb  lstur-rt.ipynb  lstur.ipynb  lstur.yaml  nrms-hyperopt.ipynb  nrms.ipynb  nrms_ebnerd-Test.ipynb  nrms_ebnerd.ipynb
tmp/: prediction_10000.csv  test_behavior_10000.txt
(+33 files in other folders)
