[tool.poetry]
name = "group-33"
version = "0.1.0"
description = ""
authors = ["Lukas Mahler <lukas.mahler@student.tuwien.ac.at>"]
readme = "README.md"

packages = [
    { include = "group_33", from = "src"},
    { include = "ebrec", from = "ebnerd/src"}
]

[tool.poetry.scripts]
main = "group_33.main:main"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
transformers = "^4.40.2"
polars = "^0.20.26"
tensorflow = "^2.16.1"
torch = "^2.3.0"
scikit-learn = "^1.4.2"
pyyaml = "^6.0.1"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
