[tool.poetry]
name = "group-33"
version = "0.1.0"
description = ""
authors = ["Lukas Mahler <lukas.mahler@student.tuwien.ac.at>"]
readme = "README.md"

packages = [
    { include = "group_33", from = "src"},
    { include = "ebrec", from = "ebnerd-benchmark/src"}
]

[tool.poetry.scripts]
main = "group_33.main:main"

[tool.poetry.dependencies]
python = "~3.11"
jupyter = "*"
transformers = ">=4.30.0, <4.37.3"
polars = "==0.20.8"
tensorflow = ">=2.12, <2.16.0"
torch = ">=2.0.0, <2.3.0"
scikit-learn = "==1.4.0"
numpy = ">=1.24.0, <1.26.1"
pyyaml = "==6.0.1"
tqdm = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
